<resources>
    <string name="app_name">MaterialTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="username">Username</string>
    <string name="signup">SignUp</string>
</resources>
