<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/username"
        android:minHeight="32dp"
        android:textColorHint="#dcdcdc" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/email"
        android:minHeight="32dp"
        android:textColorHint="#dcdcdc" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/password"
        android:minHeight="32dp"
        android:textColorHint="#dcdcdc" />

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_24dp"
        android:text="@string/signup"
        android:textColor="@color/white" />
</LinearLayout>