<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/img1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:gravity="center"
        android:id="@+id/etEmail"
        android:layout_margin="16dp"
        android:minHeight="32dp"
        android:textColorHint="#dcdcdc"
        android:background="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:gravity="center"
        android:id="@+id/etPassword"
        android:layout_margin="16dp"
        android:minHeight="32dp"
        android:textColorHint="#dcdcdc"
        android:background="@color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/bSignIn"
        android:background="@drawable/button_24dp"
        android:textColor="@color/white"
        android:layout_margin="16dp"/>

</LinearLayout>